# pygame_chess_api

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  api.py  build_and_create_venv.sh  gui.py  main.py  one_player_and_AI_test.py  pyproject.toml  render.py
assets/: black_square.xcf  square_of_in_check.xcf  square_of_selection.xcf
docs/: api.rst  conf.py  index.rst  modules.rst  one_player_and_AI_test.rst  quickstart.rst  references.rst  render.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  modules.doctree  one_player_and_AI_test.doctree  references.doctree  render.doctree  renderd.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  modules.html  objects.inv  one_player_and_AI_test.html  py-modindex.html  references.html  render.html  renderd.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  references.rst.txt
examples/: one_player_and_AI_test.py
src/pygame_chess_api/: api.py  render.py
src/pygame_chess_api/assets/: square_of_kill.xcf  square_of_special.xcf  white_square.xcf
