[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame_chess_api"
version = "0.2.7"
authors = [
  { name="LupyXev", email="lupyxev@protonmail.com" },
]
description = "A chess API in python, provided with a fancy Pygame GUI"
keywords = ["chess-engine", "chess", "pygame", "chessboard", "chess-game"]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame"
]

[project.urls]
"Documentation" = "https://pygame-chess-api.readthedocs.io/"
"Homepage" = "https://github.com/LupyXev/pygame_chess_api"

[tool.setuptools.packages.find]
where = ["src"] 


[tool.setuptools.package-data]
pygame_chess_api = ["*.png"]